# MultiStream-EvolveCluster

./: .gitignore  README.MD  pyproject.toml
multistreamevolvecluster/: EvolveCluster.py  MultiStreamEvolveCluster.py  functions.py  initial_clustering.py  mcl  mcl_data.txt  mcl_output.txt  tables_and_figures.py
multistreamevolvecluster/data/AMPds2/: data_converter.py
multistreamevolvecluster/data/AMPds2/initial_clusterings/: 1H_initial_all_braycurtis_seg_0.csv  1H_initial_all_canberra_seg_0.csv  1H_initial_all_chebyshev_seg_0.csv  1H_initial_all_correlation_seg_0.csv  1H_initial_all_cosine_seg_0.csv  1H_initial_all_fastdtw_wrapper_seg_0.csv  1H_initial_all_mahalanobis_seg_0.csv  1H_initial_all_minkowski_seg_0.csv  1H_initial_all_pairwise_euclidean_seg_0.csv  1H_initial_elec_braycurtis_seg_0.csv  1H_initial_elec_canberra_seg_0.csv  1H_initial_elec_chebyshev_seg_0.csv  1H_initial_elec_correlation_seg_0.csv  1H_initial_elec_cosine_seg_0.csv  1H_initial_elec_fastdtw_wrapper_seg_0.csv  1H_initial_elec_mahalanobis_seg_0.csv  1H_initial_elec_minkowski_seg_0.csv  1H_initial_elec_pairwise_euclidean_seg_0.csv  1H_initial_gas_braycurtis_seg_0.csv  1H_initial_gas_canberra_seg_0.csv  1H_initial_gas_chebyshev_seg_0.csv  1H_initial_gas_correlation_seg_0.csv  1H_initial_gas_cosine_seg_0.csv  1H_initial_gas_fastdtw_wrapper_seg_0.csv  1H_initial_gas_mahalanobis_seg_0.csv  1H_initial_gas_minkowski_seg_0.csv  1H_initial_gas_pairwise_euclidean_seg_0.csv  1H_initial_water_braycurtis_seg_0.csv  (+395 more)
multistreamevolvecluster/data/rbfgenerator/: rbfgenerator.py  tables_and_figures.py
(+211 files in other folders)
