[tool.poetry]
name = "multistreamevolvecluster"
version = "0.1.0"
description = "MultiStream adaptation of the EvolveCluster algorithm."
authors = ["Christian Nordahl"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "1.23.2"
matplotlib = "3.5.3"
pandas = "1.4.4"
scipy = "1.9.1"
kahypar = "1.1.7"
lxml = "4.9.1"
scikit-learn = "1.2.0"
fastdtw = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
